# MystiProxy

./: AGENTS.md  CONFIGURATION.md  CONFIG_SYSTEM_ANALYSIS.md  CONFIG_VALIDATION_FRAMEWORK_DESIGN.md  Cargo.toml  Dockerfile  FE.MD  GETTING-STARTED.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  README.MD  README.md  README.org  ROADMAP.md  build.rs  config.yaml  xxx.json
.cargo/: config.toml
.github/workflows/: build-and-archive.yml  rust.yml
.opencode/skills/harness-workflow/: SKILL.md
.trae/documents/: complete-todos.md
.trae/rules/: project-define.md
.trae/skills/long-running-agent/: SKILL.md
.trae/specs/cleanup-warnings/: checklist.md  spec.md  tasks.md
.trae/specs/improve-onboarding/: checklist.md  spec.md  tasks.md
.trae/specs/init-mystiproxy/: checklist.md  spec.md  tasks.md
base64/: Cargo.toml
base64/src/: main.rs
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
container/: Dockerfile  Dockerfile.mysticentral  Dockerfile.mystiproxy
doc/: config-guide.md  deployment.md  features.md
docs/: ADVANCED.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  EXAMPLES.md  RUST_BEST_PRACTICES.md  TROUBLESHOOTING.md  TYPESCRIPT_BEST_PRACTICES.md
examples/: api-gateway.yaml  mock-api.yaml  mysql-proxy.yaml  static-files.yaml
frontend/: Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: analytics.ts  client.ts  conflicts.ts  environments.ts  import-export.ts  instances.ts  mocks.ts  settings.ts  sync.ts  users.ts
frontend/src/components/ConflictResolver/: ConflictResolver.tsx  index.ts
frontend/src/components/ImportExport/: ImportExport.tsx
frontend/src/components/Layout/: MainLayout.tsx
frontend/src/components/MockEditor/: MockEditor.tsx
frontend/src/components/MockList/: MockList.tsx
frontend/src/components/SyncStatus/: SyncStatus.tsx  index.ts
frontend/src/pages/Analytics/: AnalyticsPage.tsx
frontend/src/pages/Conflicts/: ConflictsPage.tsx  index.ts
frontend/src/pages/Dashboard/: Dashboard.tsx
frontend/src/pages/Environments/: EnvironmentsPage.tsx  index.ts
frontend/src/pages/Instances/: InstancesPage.tsx
frontend/src/pages/Login/: LoginPage.tsx
frontend/src/pages/Mocks/: MockCreatePage.tsx  MockEditPage.tsx  MocksPage.tsx
frontend/src/pages/Settings/: SettingsPage.tsx
frontend/src/pages/Users/: UsersPage.tsx
frontend/src/stores/: mockStore.ts
frontend/src/types/: api.ts
http_proxy/: Cargo.toml  LOCAL_MANAGEMENT_README.md
http_proxy/example/: ex_proxy.rs
http_proxy/examples/: local_management_example.rs
http_proxy/src/: gateway.rs  lib.rs  mocker.rs
http_proxy/src/management/: config.rs  error.rs  handlers.rs  import.rs  integration.rs  models.rs  repository.rs
k8s/: frontend.yaml  mysql.yaml  mysticentral-mysql.yaml  mysticentral.yaml  mystiproxy-local.yaml  namespace.yaml  postgres.yaml
mysti-common/: Cargo.toml
mysti-common/src/: lib.rs  models.rs
mysticentral/: Cargo.toml  Dockerfile
mysticentral/src/: config.rs  error.rs  lib.rs  main.rs
mysticentral/src/db/: mod.rs  pool.rs
mysticentral/src/db/migrations/: 20260301000000_initial_schema.sql
mysticentral/src/handlers/: mod.rs  routes.rs
mysticentral/src/middleware/: auth.rs  mod.rs
mysticentral/src/models/: environment.rs  instance.rs  mod.rs  user.rs
mysticentral/src/services/: auth_service.rs  conflict_service.rs  environment_repository.rs  environment_service.rs  instance_repository.rs  instance_service.rs  mock_service.rs  mod.rs  postgres_repository.rs  repository.rs  sync_protocol.rs  sync_service.rs  websocket.rs
mysticentral/src/tls/: mod.rs  openssl_server.rs  reloader.rs
mystictl/: Cargo.toml
mystictl/src/: main.rs
mystiproxy/: Cargo.toml
mystiproxy/examples/: docker-proxy.yaml
mystiproxy/src/: arg.rs  main.rs
mystiproxy/src/config/: mod.rs
mystiproxy/src/http/: body.rs  mod.rs  ntlm.rs  server.rs
mystiproxy/src/management/: db.rs  handlers.rs
mystiproxy/src/proxy/: forward.rs
mystiproxy/tests/: tls_integration_test.rs
openspec/changes/archive/2026-03-30-remove-unused-code/: design.md  proposal.md  tasks.md
openspec/changes/integrate-unused-modules/: design.md  proposal.md  tasks.md
openspec/specs/dead-code-cleanup/: spec.md
openspec/specs/http-proxy-integration/: spec.md
scripts/: build-images.sh  deploy-k8s-direct.sh  deploy-k8s.sh
specs/001-http-mock-forwarding/: spec.md
specs/001-http-mock-forwarding/checklists/: requirements.md
specs/001-mock-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mock-management/checklists/: requirements.md
specs/001-mock-management/contracts/: openapi.yaml
src/: arg.rs  context.rs  engine.rs  error.rs  ex_proxy.rs  gateway.rs  lib.rs  main.rs  metrics.rs  mocker.rs  proxy.rs  stream.rs  tls.rs  utils.rs
src/config/: mod.rs
src/http/: auth.rs  body.rs  client.rs  handler.rs  header.rs  mod.rs  ntlm.rs  proxy.rs  server.rs  static_files.rs  upstream.rs  websocket.rs
src/io/: listener.rs  mod.rs  stream.rs
src/k8s/: demo.rs
src/management/: config.rs  handlers.rs  mod.rs  models.rs  repository.rs  sync.rs
src/mock/: mod.rs
src/proxy/: address.rs  forward.rs  mod.rs  tcp.rs  unix.rs
src/router/: mod.rs
src/tls/: mod.rs
tests/: http_integration.rs  tcp_proxy_integration.rs  tls_integration_test.rs
