[workspace]
resolver = "2"
members = [
    "mysti-common",
    "mysticentral",
    "mystictl",
    "http_proxy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[package]
name = "mystiproxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1"

# TLS
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rustls-pemfile = "2"
webpki-roots = "0.26"

# OpenSSL for legacy TLS 1.0/1.1 support
openssl = { version = "0.10", optional = true }
tokio-openssl = { version = "0.6", optional = true }

# Async utilities
futures = "0.3"
notify = { version = "6.0", optional = true }

# Authentication
jsonwebtoken = "9"

# URL parsing
url = "2"

# Regex
regex = "1"

[dev-dependencies]
tempfile = "3"
rcgen = "0.13"

[features]
default = []
# Enable OpenSSL support for legacy TLS 1.0/1.1
legacy-tls = ["openssl", "tokio-openssl", "notify"]
# Enable certificate hot reload
hot-reload = ["notify"]
