[package]
name = "mysti-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

# Additional dependencies
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true }
